# cepo

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  infos.json  spam_request.py
2023/04/20/: 1.json  2.json  3.json  4.json  5.json  6.json
data/: install_infos.sh
docs/: auth.md
parametres/: machines_decollages.json  pilotes_tr.json
src/: affectation.rs  client.rs  configuration.rs  flight.rs  flightlog.rs  lib.rs  main.rs  mise_a_jour.rs  ogn.rs  pilotes.rs  planche.rs  tests.rs  vol.rs
src/flightlog/: mod.rs
src/planche/: mise_a_jour.rs  mod.rs
