[package]
name = "serveur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = "0.4.24"
env_logger = "0.10.0"
hyper = { version = "0.14", features = ["full"] }
json = "0.12.4"
log = "0.4.19"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
simple_http_parser = "0.3.2"
tokio = { version = "1", features = ["full"] }
