[package]
name = "serveur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = "0.4.24"
confy = "0.5.1"
dirs = "5.0.1"
env_logger = "0.10.0"
human-panic = "1.1.5"
hyper = { version = "0.14", features = ["full"] }
json = "0.12.4"
log = "0.4.19"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = "1.0.180"
tokio = { version = "1", features = ["full"] }
